# photo-album

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
doc/: About.md
exec/photo_album/: CMakeLists.txt
exec/photo_album/src/: main.c
exec/photo_album/test/: test__photo_album.cpp
lib/json/: CMakeLists.txt
lib/json/include/kirke/: json.h
lib/json/src/: json.c
lib/json/test/: test__libjson.cpp
